--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: white;
 }
 
 .cover__item::before {
@@ -23,13 +25,6 @@
     content: '';
 }
 
-.cover__item:hover:after {
+.cover__item:hover::before {
     background: rgba(42, 44, 47, 0.8);
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    content: '';
 }
