--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,6 +10,19 @@
 
 @media (max-width: 1200px) {
     .photo-grid {
+         max-width: 928px;
+    }
+}
+
+@media (max-width: 768px) {
+    .photo-grid {
+         max-width: 768px;
+         padding: 0 24px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .photo-grid {
          gap: 14px;
     }
 }
@@ -30,7 +43,7 @@
 
 @media screen and (max-width: 420px) {
     .photo-grid {
-         gap: 12px;
-         max-width: 288px;
+        max-width: 576px;
+        padding: 0 16px;
     }
 }
