--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,11 @@
 @import url('../vendor/normalize.css');
+@import url('../vendor/inter-font.css');
 @import url('../blocks/root/root.css');
-@import url('../blocks/content-container/content-container.css');
-@import url('../blocks/content-container/content-container-header.css');
-@import url('../blocks/content-container/content-container-places.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__nav/header__nav.css');
 @import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/header/__lang-link/header__lang-link.css');
+@import url('../blocks/header/__lang-link-element/header__lang-link-element.css');
 @import url('../blocks/header/__lang-link/_selected/header__lang-link_selected.css');
 @import url('../blocks/header/__lang-links/header__lang-links.css');
 @import url('../blocks/lead/lead.css');
@@ -43,32 +42,6 @@
 @import url('../blocks/footer/__links/footer__links.css');
 @import url('../blocks/links-hover/links-hover.css');
 
-@font-face {
-     font-family: 'Inter';
-     font-style: normal;
-     font-weight: 400;
-     font-display: swap;
-     src: url("../fonts/Inter-Regular.woff2") format("woff2"),
-          url("../fonts/Inter-Regular.woff") format("woff");
-}
-
-@font-face {
-     font-family: 'Inter';
-     font-style: normal;
-     font-weight: 700;
-     font-display: swap;
-     src: url("../fonts/Inter-Bold.woff2") format("woff2"),
-          url("../fonts/Inter-Bold.woff") format("woff");
-}
-
-@font-face {
-     font-family: 'Inter';
-     font-style: normal;
-     font-weight: 900;
-     font-display: swap;
-     src: url("../fonts/Inter-Black.woff2") format("woff2"),
-          url("../fonts/Inter-Black.woff") format("woff");
-}
 
 
 
