--- a/blocks/lead/__main-illustration/lead__main-illustration.css
+++ b/blocks/lead/__main-illustration/lead__main-illustration.css
@@ -10,3 +10,9 @@
           margin-top: 40px;
      }
 }
+
+@media screen and (max-width:1024px) {
+     .lead__main-illustration {
+          max-width: 928px;
+     }
+}
