--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,17 +9,11 @@
     width: 100%;
 }
 
-@media screen and (max-width: 720px) {
-    .lead__subtitle {
-         font-size: clamp(16px, 4vw, 30px);
-         line-height: clamp(20px, 8vw, 36px);
-    }
-}
-
 @media screen and (max-width: 420px) {
     .lead__subtitle {
          font-size: 16px;
          line-height: 20px;
          margin-top: 16px;
+         max-width: 288px;
     }
 }
